# Robotic-Gripper-for-Microgravity

./: README.md
data_evaluation/notebooks/: 0_Slider_Asphalt.ipynb  0_Slider_Kalkstein.ipynb  0_Slider_Lavarock.ipynb  0_Slider_MatrixBrekzie.ipynb  0_Slider_Schieferstein.ipynb  0_Slider_Sediment.ipynb  1_Revoulution_Asphalt.ipynb  1_Revoulution_Kalkstein.ipynb  1_Revoulution_Lavarock.ipynb  1_Revoulution_MatrixBrekzie.ipynb  1_Revoulution_Schieferstein.ipynb  1_Revoulution_Sediment.ipynb  2_Combined_Asphalt.ipynb  2_Combined_Kalkstein.ipynb  2_Combined_Lavarock.ipynb  2_Combined_MatrixBrekzie.ipynb  2_Combined_Schieferstein.ipynb  2_Combined_Sediment.ipynb  40°.ipynb  AngleTest_Template.ipynb  Angle_Stats.ipynb  Asphalt_40°.ipynb  Asphalt_50°.ipynb  Asphalt_60°.ipynb  Asphalt_70°.ipynb  Asphalt_80°.ipynb  Asphalt_90°.ipynb  Combined.ipynb  Kalkstein_40°.ipynb  Kalkstein_50°.ipynb  Kalkstein_60°.ipynb  Kalkstein_70°.ipynb  Kalkstein_80°.ipynb  Kalkstein_90°.ipynb  Lavarock_40°.ipynb  Lavarock_50°.ipynb  Lavarock_60°.ipynb  Lavarock_70°.ipynb  Lavarock_80°.ipynb  Lavarock_90°.ipynb  (+22 more)
data_evaluation/notebooks/.ipynb_checkpoints/: 0_Slider_Asphalt-checkpoint.ipynb  0_Slider_Kalkstein-checkpoint.ipynb  0_Slider_Lavarock-checkpoint.ipynb  0_Slider_MatrixBrekzie-checkpoint.ipynb  0_Slider_Schieferstein-checkpoint.ipynb  0_Slider_Sediment-checkpoint.ipynb  1_Revoulution_Asphalt-checkpoint.ipynb  1_Revoulution_Kalkstein-checkpoint.ipynb  1_Revoulution_Lavarock-checkpoint.ipynb  1_Revoulution_MatrixBrekzie-checkpoint.ipynb  1_Revoulution_Schieferstein-checkpoint.ipynb  1_Revoulution_Sediment-checkpoint.ipynb  2_Combined_Asphalt-checkpoint.ipynb  2_Combined_Kalkstein-checkpoint.ipynb  2_Combined_Lavarock-checkpoint.ipynb  2_Combined_MatrixBrekzie-checkpoint.ipynb  2_Combined_Schieferstein-checkpoint.ipynb  2_Combined_Sediment-checkpoint.ipynb  40°-checkpoint.ipynb  AngleTest_Template-checkpoint.ipynb  Angle_Stats-checkpoint.ipynb  Asphalt_40°-checkpoint.ipynb  Asphalt_50°-checkpoint.ipynb  Asphalt_60°-checkpoint.ipynb  Asphalt_70°-checkpoint.ipynb  Asphalt_80°-checkpoint.ipynb  (+37 more)
firmware/ax12a_controller/: AX_12A_master_file_v2.ino
hardware/cad/: 001_000001_001_M_Link1_f1.prt  001_000001_001_M_Link2_f1 - Copy.prt  001_000001_001_M_insert.prt  AX-12A_stp.prt  Block_90_degree.prt  Gripper_V06.prt  PRT0002.prt  PRT0006.prt  PRT0007.prt  SSFJW5-85-M3-N3.prt  Sodemann 40900_step.prt  arduino_holder.prt  bushing inner d_5_ L_12.prt  dowel_pin.prt  dynamixel_adapter.prt  dynamixel_axle_02.prt  floor_for_body.prt  kupplung_02.prt  motor_adapter_06_3D.prt  motor_axel_02.prt  nds_000001_001_M_Holder_links.prt  nds_000001_001_M_link_body1.prt  nds_000001_001_M_top_x1block.prt  nds_000002_031_M_Block_50.prt  tendon_differential.prt  tendon_differential_02.prt  tendon_differential_04.prt
hardware/stl/: Adapter_V02.stl  Adapter_V02_3D.stl  ballbearing_fix.stl  cover_plate.stl  dowel_pin_3D.stl  dynamixel_adapter.stl  dynamixel_axle.stl  dynamixel_axle_02.stl  fixing_device_3D.stl  fixing_device_3D_1.stl  fixing_disk.stl  gripperleg.stl  kugellager_platte_3D_printing.stl  kupplung.stl  kupplung_02.stl  kupplung_3D.stl  linkage_pin_3D_printing.stl  linkage_testarm.stl  motor_adapter_03.2_3D.stl  motor_adapter_03_3D_printing.stl  motor_adapter_04_3D.stl  motor_adapter_05_3D.stl  motor_adapter_05_3D_longer.stl  motor_adapter_05_3D_longer_1.stl  motor_adapter_06_3D.stl  motor_axel_02.stl  motor_axel_3D.stl  motor_axel_3D_1.stl  motor_shaft_3D_printing.stl  tendon_differential_02.stl  tendon_differential_03.stl  tendon_differential_04.stl  tendon_differential_04_1.stl  tendon_differential_04_2.stl  tendon_differential_04_3.stl  tendon_differential_05.stl  tendon_linkage_part_03_3D_printing.stl  testleg_04.stl  testleg_05.stl
software/franka_ft_reader/: CMakeLists.txt  README.md  package.xml
software/franka_ft_reader/config/: controller_params.yaml
software/franka_ft_reader/launch/: run_experiment.launch
software/franka_ft_reader/nodes/: controller_node.py  measurement_logger.py
(+41 files in other folders)
